add more security and finish documentation
