# backend-swordhealth/src/common/handler/build-routes-handler/build-routes-handler.js
@@ -3,6 +3,10 @@ const buildRoutesHandler = ({ routes }) => {
     handlers: {
       createUser: routes.userRoutes.controller.createUser,
       loginUser: routes.loginRoutes.controller.loginUser,
+      createTask: routes.tasksRoutes.controller.createTask,
+      getTasks: routes.tasksRoutes.controller.getTasks,
+      updateTask: routes.tasksRoutes.controller.updateTask,
+      deleteTask: routes.tasksRoutes.controller.deleteTask,
     },
   };
 };
